Add skins and fix breaking skins ingame